// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonAuth - UserCard Renders with a lastLogin prop 1`] = `
<div
  className="makeStyles-profileArea-8"
>
  <div
    className="makeStyles-card-7"
  >
    <div
      className="makeStyles-cardHeaderContainer-6"
    >
      <img
        alt="Profile"
        className="profile-image"
        src="label/baby/jr"
      />
    </div>
    <div>
      <h4
        className="MuiTypography-root MuiTypography-h4 css-p7yqh7-MuiTypography-root"
        style={
          {
            "margin": "10px",
          }
        }
      >
        Slappy White
      </h4>
    </div>
    <div
      className="makeStyles-emailChipContainer-10"
    >
      <div
        className="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary chip-email css-nqomul-MuiChip-root"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorPrimary css-18uepp3-MuiAvatar-root"
          color="primary"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="EmailIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z"
            />
          </svg>
        </div>
        <span
          className="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
        >
          separate@knob
        </span>
      </div>
    </div>
    <div
      className="makeStyles-profileInfoArea-9"
    >
      <hr
        className="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      />
      <div
        className="label-info-container"
      >
        <label
          className="control-label label-block"
        >
          Identity Provider
        </label>
        <label
          className="label-normal"
        >
          monks
        </label>
      </div>
      <div
        className="label-info-container"
      >
        <label
          className="control-label label-block"
        >
          Last Login
        </label>
        <label
          className="label-normal"
        >
          May 5th, 2018 12:00:00 am
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`NeonAuth - UserCard Renders without a lastLogin prop 1`] = `
<div
  className="makeStyles-profileArea-3"
>
  <div
    className="makeStyles-card-2"
  >
    <div
      className="makeStyles-cardHeaderContainer-1"
    >
      <img
        alt="Profile"
        className="profile-image"
        src="carhole"
      />
    </div>
    <div>
      <h4
        className="MuiTypography-root MuiTypography-h4 css-p7yqh7-MuiTypography-root"
        style={
          {
            "margin": "10px",
          }
        }
      >
        Guy Incognito
      </h4>
    </div>
    <div
      className="makeStyles-emailChipContainer-5"
    >
      <div
        className="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary chip-email css-nqomul-MuiChip-root"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorPrimary css-18uepp3-MuiAvatar-root"
          color="primary"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="EmailIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z"
            />
          </svg>
        </div>
        <span
          className="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
        >
          joeyjojojr@shabadu
        </span>
      </div>
    </div>
    <div
      className="makeStyles-profileInfoArea-4"
    >
      <hr
        className="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      />
      <div
        className="label-info-container"
      >
        <label
          className="control-label label-block"
        >
          Identity Provider
        </label>
        <label
          className="label-normal"
        >
          momar
        </label>
      </div>
      <div
        className="label-info-container"
      >
        <label
          className="control-label label-block"
        >
          Last Login
        </label>
        <label
          className="label-normal"
        />
      </div>
    </div>
  </div>
</div>
`;
